--- a/css/main.css
+++ b/css/main.css
@@ -1,173 +1,341 @@
-/***** BASE STYLES *****/
+/* ==========================================================================
+   Base styles: opinionated defaults
+   ========================================================================== */
+
+html {
+  color: #222;
+  font-size: 1em;
+  line-height: 1.4;
+}
+
+::-moz-selection {
+  background: #1f202b;
+  text-shadow: none;
+}
+
+::selection {
+  background: #1f202b;
+  text-shadow: none;
+}
+
+/*
+ * A better looking default horizontal rule
+ */
+
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #ccc;
+  margin: 1em 0;
+  padding: 0;
+}
+/*
+ * Remove the gap between audio, canvas, iframes,
+ * images, videos and the bottom of their containers:
+ * https://github.com/h5bp/html5-boilerplate/issues/440
+ */
+
+audio,
+canvas,
+iframe,
+img,
+svg,
+video {
+  vertical-align: middle;
+}
+
+/*
+ * Remove default fieldset styles.
+ */
+
+fieldset {
+  border: 0;
+  margin: 0;
+  padding: 0;
+}
+
+/*
+ * Allow only vertical resizing of textareas.
+ */
+
+textarea {
+  resize: vertical;
+}
+
+/* ==========================================================================
+   Browser Upgrade Prompt
+   ========================================================================== */
+
+.browserupgrade {
+  margin: 0.2em 0;
+  background: #ccc;
+  color: #000;
+  padding: 0.2em 0;
+}
+
+/* ==========================================================================
+   Author's custom styles
+   ========================================================================== */
+/* General Styles */
+
+html {
+      font-size: 16px;
+}
+
 body {
-  background-color: #1f202b;
-  font-family: 'Montserrat', sans-serif;
-  margin: 40px;
-  padding-left: 50px;
+      background-color: #1f202b;
+      font-family: 'Montserrat', sans-serif;
+      font-size: 1em;
+      color: white;
+      text-align: left;
 }
 
-/***** GRID *****/
+ul,
+ol {
+  list-style-type: none;
+}
 
-.full-width {
-  width: 1200px;
-  margin: 0 auto;
+a {
+  color: white;
+  text-decoration: none;
 }
-.half-width {
-  width: 600px;
-  float: left;
+
+h1 {
+  font-family: 'Source Code Pro', monospace;
+  font-size: 2.7em;
 }
-.third-width {
-  width: 400px;
-  float: left;
+
+h2 {
+  font-size: 2em;
+}
+
+h3 {
+  font-family: 'Source Code Pro', monospace;
+  font-size: 1.75em;
+  color: #fa0075;
+}
+
+h4 {
+  font-size: 1.5em;
+}
+
+p {
+  font-size: 1em;
+  line-height: 1.285;
+}
+
+img {
+  width: 100%;
+}
+
+figure {
+  margin: 0;
+}
+
+address {
+  font-style: normal;
+}
+
+.content-wrapper {
+  width: 90%;
+  margin: 50px 0;
+}
+
+/* -------- Base Header - Footer Styles -------*/
+
+header, footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
 }
 
 /***** HEADER *****/
 
 header {
-  height: 40px;
-  color: white;
-  width:1200px;
+  padding: 20px 0;
 }
 
-header h1 {
-  font-size: 30px;
-  padding: 30px 0 0 0;
-  text-align: left;
+header .content-wrapper {
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
 }
 
-nav {
-  float: right;
-  padding-top: 50px;
+header figure {
+  width: 15%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
 }
 
-nav ul li{
-  display: inline-block;
+header h2 {
+  margin: 0;
+  font-size: 1.9em;
 }
 
-nav ul li a {
-  text-decoration: none;
-  font-size: 18px;
-  color: white;
-  padding-left: 80px;
+.header-divider {
+  background: white;
+  height: 1px;
+  width: 100%;
+  margin: 10px 0 20px 0;
 }
 
-/***** TOP *****/
-
-#top h3 {
-  color: white;
-  position: absolute;
-  top: 50%;
-  left: 10%;
-  font-family: 'Source Code Pro', monospace;
-  font-size: 62px;
-  width: 800px;
+header nav {
+  width: 85%;
+  font-size: 1.125em;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-flow: row wrap;
 }
 
-/***** MY PORTFOLIO *****/
-#portfolio {
-  width: 1200px;
+header nav ul {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: space-around;
 }
 
-#portfolio div {
-  color: white;
-  font-size: 20px;
-  line-height: 28px;
-}
-
-#portfolio h2 {
+footer {
   text-align: center;
+  flex-direction: column;
+}
+
+footer .content-wrapper {
+  width: 70%;
+  margin: 50px 0;
+}
+
+footer .footer-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+footer h3 {
+  margin: 0;
+}
+
+footer .footer-divider {
+  background: white;
+  height: 1px;
+  width: 100%;
+  margin: 10px 0 20px 0;
+}
+
+footer p {
+  margin: 10px;
+  font-size: 1.125em;
+  line-height: 1.5;
+}
+
+footer p span {
+  text-transform: uppercase;
+}
+
+footer figure {
+  width: 50%;
+  margin: 10px;
+}
+
+footer .social-icons {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+footer .social-icons p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer i {
+  font-size: 2.5em;
+  margin: 0 10px;
   color: #fa0075;
-  font-family: 'Source Code Pro', monospace;
-  padding: 20px 0 30px 0;
 }
 
-#jubilee-logo, #rogue-pickings, #NYAQ-logo {
-  width: 550px;
-  height: 400px;
-  float: left;
-  text-align: right;
+footer .copyright {
+    margin: 20px 0;
+}
+/***** HERO *****/
+
+.hero-area {
+  background: url('../img/hero-background.png') center no-repeat #333;
+  background-size: cover;
+  background-position: center;
+  min-height: 500px;
+  display: flex;
+  justify-content: center;
+  flex-flow: row wrap;
 }
 
-#NYAQ-logo {
-  padding-bottom: 50px;
+/***** PORTFOLIO *****/
+
+.portfolio {
+  display: flex;
+  justify-content: center;
+  flex-flow: row wrap;
 }
 
-#jubilee-description, #rogue-logo, #NYAQ-description {
-  width: 550px;
-  height: 400px;
-  float:right;
+.portfolio .content-wrapper {
+  width: 75%;
+}
+
+.portfolio h3 {
+  margin: 0 0 20px 0;
+  text-align: center;
+}
+
+.portfolio article {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column;
+}
+
+.portfolio h4 {
+  margin: 10px 0;
+}
+
+.portfolio figure {
+  margin-bottom: 20px;
+  width: 65%;
 }
 
 /***** ABOUT *****/
 
-#about {
-  background: url('../img/keyboard-background.png') no-repeat center;
-  height: 800px;
-  width: 1200px;
-  clear: both;
+.about {
+  background: url('../img/keyboard-background.png') center no-repeat #eee;
+  background-size: cover;
+  background-position: center;
+  min-height: 500px;
+  display: flex;
+  justify-content: center;
+  flex-flow: row wrap;
 }
-#about h2 {
-  color: #fa0075;
-  font-family: 'Source Code Pro';
-  font-size: 36px;
+
+.about .content-wrapper {
+  margin-top: 20px;
+  margin-bottom: 110px;
+}
+.about h3 {
+  margin: 0;
   text-align: center;
-  padding-top: 150px;
 }
-#about p {
+
+.about p {
   color: black;
   text-align: left;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 20px;
-  margin-left: 40px;
-}
-
-/***** Contact *****/
-#contact {
-  height: 700px;
-  float: left;
-}
-#contact h2 {
-  text-align: center;
-  color: #fa0075;
-  font-family: 'Source Code Pro', monospace;
-  font-size: 36px;
-  padding-bottom: 50px;
-}
-
-#contact p {
-  padding-top: 40px;
-  text-align: center;
-  color: #ffffff;
-  font-size: 24px;
-  line-height: 5px;
-}
-#contact ul {
-  list-style: none;
-}
-#contact ul li {
-  display: inline-block;
-  padding-left: 15px;
-  padding-top: 10px;
-}
-#contact ul img {
-  padding-right: 48px;
-  float: right;
-}
-#typewriter img {
-  width: 80%;
-  border: 12px solid #ffffff;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-/***** FOOTER *****/
-
-footer {
-  clear: both;
-  height: 80px;
-  text-align: center;
-  font-size: 18px;
-  color: white;
-  width:1200px;
+  font-size: 1.2em;
+  width: 90%;
 }
