--- a/css/main.css
+++ b/css/main.css
@@ -422,11 +422,14 @@ header .header-divider {
 
 footer .content-wrapper {
   width: 100%;
+  margin: 80px 0 100px 0;
 }
 
 footer h3 {
   text-align: center;
   width: 100%;
+  margin-bottom: 40px;
+  font-size: 2.5em;
 }
 
 footer .footer-content {
@@ -445,6 +448,10 @@ footer figure {
 
 footer p {
   margin: 0 0 10px 0;
+}
+
+footer .footer-divider {
+  width: 0%;
 }
 
 @media only screen and (min-width: 1200px) {
